CSS Changes to try to prevent slide bar mess ups Made the central editor wider and set the editor inputs to 240px to prevent the appearance of slider bars wrapping the inputs to a new line.
This in turn meant that the selected boxes that grow would jump down the page
and be unselected, then jump up and select again usw.

--- a/rdlogmanager/clock/css/clock.css
+++ b/rdlogmanager/clock/css/clock.css
@@ -7,7 +7,7 @@ body {
 
 #content {
 
-  min-width: 865px;
+  min-width: 890px;
   max-width: 1024px;
   overflow: auto;
 
@@ -107,7 +107,7 @@ h2 {
 /* Editor */
 #editor {
 
-  max-width: 440px;
+  min-width: 460px;
   height: 85vh;
   overflow: auto;
   float: left;
@@ -135,7 +135,7 @@ h2 {
   float: left;
   clear: right;
   height: 1em;
-  width: 300px;
+  width: 240px;
 
 }
 
